2008-12-19  Dan Williams  <dcbw@redhat.com>

	Patch from Drew Moseley <dmoseley@mvista.com>

	* src/applet-device-wifi.c
		- (free_ap_notification_data): remove ap notification timeout when
			freeing ap notification data

2008-12-11  Dan Williams  <dcbw@redhat.com>

	* src/ap-menu-item.c
	  src/ap-menu-item.h
		- (nm_network_menu_item_set_detail): disable the menu item if the device
			can't even connect to the AP

	* src/applet-device-wifi.c
		- (add_new_ap_item): send device capabilities to menu item

2008-12-11  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_pre_keyring_callback): handle right-click menu too

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* configure.ac
		- Update tarball name to match project name

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (other_wireless_activate_cb, new_network_activate_cb,
		   wireless_get_more_info, wireless_get_secrets): really fix focus
			stealing prevention; the window needs to be visible before trying
			to present it with an updated time, otherwise GTK just calls
			gtk_window_show() instead of setting the timestamp

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (applet_pre_keyring_callback): ensure that the menu is actually
			destroyed before letting the keyring calls happen

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/ip4-routes-dialog.c
		- (ip4_routes_dialog_new, ip4_routes_dialog_update_setting): get and
			set never-default accordingly

	* src/connection-editor/ce-page-ip4.glade
		- Add never-default checkbox to the IP4 routes dialog

2008-12-09  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/main.c
		- (impl_start): bring connection editor window to front when it's
			launched again, if it's already started

	* src/connection-editor/nm-connection-list.c
	  src/connection-editor/nm-connection-list.h
		- (nm_connection_list_present): no longer static

2008-12-05  Dan Williams  <dcbw@redhat.com>
